--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,3 @@
-body {
-  margin: 0;
-}
-
-button {
-  background-color: none;
-}
-
-.header {
-  background-color: white;
-  border-bottom: 0.1em solid black;
-  text-align: center;
-  padding: 8%;
-  font-size: 1.75em;
-}
-
 .card {
   border: 0.1em solid black;
   min-height: 18em;
@@ -73,31 +57,6 @@ button {
   padding: 0.5em;
 }
 
-.footer {
-  background-color: white;
-  border-top: 0.1em solid black;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 8%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.footer__link {
-  height: 75%;
-  width: 33%;
-  text-align: center;
-}
-
-.footer__icon {
-  height: 100%;
-  stroke: black;
-  fill: none;
-}
-
 .profile {
   padding-left: 2.5em;
   padding-right: 2.5em;
@@ -147,4 +106,83 @@ button {
 
 .about__description {
   margin: 0;
+}
+
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 1em;
+}
+
+.stats__border {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 0.1em solid black;
+  border-radius: 10px;
+  padding-left: 0.4em;
+  padding-right: 1em;
+  width: 4em;
+}
+
+.stats__icon {
+  height: auto;
+  width: 2em;
+}
+
+.modals {
+  padding-top: 3em;
+  font-size: 1.25em;
+}
+
+.modals__darkmode {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modals__settings {
+  text-decoration: none;
+  color: black;
+}
+
+.modals__switch {
+  position: relative;
+  display: inline-block;
+  height: 2em;
+  width: 3.5em;
+}
+
+.modals__switch input {
+  height: 0;
+  width: 0;
+}
+
+.modals__slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 0.1em solid black;
+  border-radius: 30px;
+}
+
+.modals__slider:before {
+  position: absolute;
+  content: "";
+  height: 1.5em;
+  width: 1.5em;
+  left: 0.175em;
+  bottom: 0.15em;
+  border-radius: 30px;
+  background-color: black;
+}
+
+input:checked + .modals__slider:before {
+  transform: translateX(26px);
 }
